Refactor image attachment thumbnail feature